--- a/Level1/Dockerfile/Dockerfile
+++ b/Level1/Dockerfile/Dockerfile
@@ -5,22 +5,24 @@ MAINTAINER Daniel Grocki <grockid@oregonstate.edu>
 
 RUN apk -U add bash
 RUN apk -U add git
-RUN apk add openrc
 
 SHELL ["/bin/bash", "-c"]
 
 # Copy the files into container
-COPY init /
+COPY start /
 COPY intro.txt /
 COPY unlock /bin/unlock
 COPY room1 /room1
-COPY empty /empty
+COPY .bashrc /.bashrc
+COPY tutorial1.txt /tutorial1.txt
 
+RUN chmod 755 /tutorial1.txt
 RUN chmod 755 /room1
-RUN chmod 755 /empty
-RUN chmod 755 /init
+RUN chmod 755 /.bashrc
+RUN chmod 755 /start
 RUN chmod 755 /bin/unlock
 
 # Run this command by default
-#ENTRYPOINT /init && /bin/bash && cd /home 
-CMD /init 
+#ENTRYPOINT /bin/bash && source cd /home 
+
+CMD bash 
